--- a/Dota-web-app/src/app/heros/heros.component.css
+++ b/Dota-web-app/src/app/heros/heros.component.css
@@ -51,6 +51,7 @@ input {
 	cursor: pointer;
 	transition: transform .5s;
 	background-color: rgb(36, 24, 24);
+	width: 211px;
 }
 
 .UserStyle:hover {
@@ -60,13 +61,16 @@ input {
 	/* Safari 3-8 */
 	transform: scale(1.3);
 	z-index: 1;
-
-	
 }
-.card-img-caption .card-text {
+.card-text {
+	opacity: 0;
 	position: absolute;
 	bottom: 3px;
-	left: 20%;
+	left: 10%;
+}
+
+.card-img-caption:hover .card-text{
+	opacity: 1;
 }
 
 .ImgEdit {
@@ -130,4 +134,8 @@ input {
 
 .iconImg{
 	width: 24px;
+}
+.scrol{
+	height: 500px;
+	overflow-y: scroll;
 }
