language change update with Google Api

--- a/Dota-web-app/src/app/heros/heros.component.html
+++ b/Dota-web-app/src/app/heros/heros.component.html
@@ -1,100 +1,7 @@
-<nav class="navbar navbar-expand-lg ml-1">
-	<a class="navbar-brand" href="#"> <img class="LogoDesign" src="../../assets/Images/logo.png"></a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-		aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		<!-- <span class="navbar-toggler-icon "></span> -->
-		<div class="icon"></div>
-		<div class="icon"></div>
-		<div class="icon"></div>
-	</button>
-
-	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-					aria-haspopup="true" aria-expanded="false">
-					GAME
-				</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#">STORE</a>
-					<a class="dropdown-item" href="#">PATCHES</a>
-					<a class="dropdown-item" href="#">GAMEPLAY UPDATES</a>
-					<a class="dropdown-item" href="#">PREVIOUS UPDATES</a>
-				</div>
-			</li>
-			<li class="nav-item active">
-				<a class="nav-link active" href="#">HEROS</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">NEWS</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">ESPORTS</a>
-			</li>
-			<li class="nav-item dropdown">
-
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-					aria-haspopup="true" aria-expanded="false">
-					Select Language
-				</a>
-				<div class="dropdown-menu scrol" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#" (click)="getData('english')">English</a>
-					<a class="dropdown-item" href="#" (click)="getData('spanish')">Español - España (Spanish -
-						Spain)</a>
-					<a class="dropdown-item" href="#" (click)="getData('french')">Français
-						(French)</a><a class="dropdown-item" href="#" (click)="getData('italian')">Italiano
-						(Italian)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('german')">Deutsch (German)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('greek')">Ελληνικά (Greek)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('koreana')">한국어 (Korean)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('schinese')">简体中文 (SimplifiedChinese)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('tchinese')">繁體中文 (Traditional Chinese)</a>
-					<a class="dropdown-item" href="#" (click)="getData('russian')">Русский (Russian)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('thai')">ไทย (Thai)</a>
-					<a class="dropdown-item" href="#" (click)="getData('japanese')">日本語 (Japanese)</a>
-					<a class="dropdown-item" href="#" (click)="getData('portuguese')">Português (Portuguese)</a>
-					<a class="dropdown-item" href="#" (click)="getData('brazilian')">Português - Brasil (Portuguese -
-						Brazil)</a>
-					<a class="dropdown-item" href="#" (click)="getData('polish')">Polski(Polish)</a>
-					<a class="dropdown-item" href="#" (click)="getData('danish')">Dansk(Danish)</a>
-					<a class="dropdown-item" href="#" (click)="getData('dutch')">Nederlands (Dutch)</a>
-					<a class="dropdown-item" href="#" (click)="getData('finnish')">Suomi (Finnish)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('norwegian')">Norsk
-						(Norwegian)</a><a class="dropdown-item" href="#" (click)="getData('swedish')">Svenska
-						(Swedish)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('czech')">Čeština (Czech)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('hungarian')">Magyar
-						(Hungarian)</a><a class="dropdown-item" href="#" (click)="getData('romanian')">Română
-						(Romanian)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('bulgarian')">Български
-						(Bulgarian)</a><a class="dropdown-item" href="#" (click)="getData('turkish')">Türkçe
-						(Turkish)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('ukrainian')">Українська
-						(Ukrainian)</a><a class="dropdown-item" href="#" (click)="getData('vietnamese')">Tiếng Việt
-						(Vietnamese)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('latam')">Español - Latinoamérica
-						(Spanish -Latin America)</a>
-				</div>
-
-			</li>
-		</ul>
-	</div>
-</nav>
-
+<app-navbar></app-navbar>
 <div class="container">
 	<div class="row">
+		
 		<div class="col text-center heading">
 			<p>CHOOSE YOUR HERO</p>
 			<h3 class="p-5">From magical tacticians to fierce brutes and cunning rogues, Dota 2's hero pool is massive
