--- a/Dota-web-app/src/app/navbar/navbar.component.html
+++ b/Dota-web-app/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md  ml-1">
+<nav class="navbar navbar-expand-lg ml-1">
 	<a class="navbar-brand" href="#"> <img class="LogoDesign" src="../../assets/Images/logo.png"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 		aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
 				</div>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link" href="#">HEROS <span class="sr-only">(current)</span></a>
+				<a class="nav-link active" href="#">HEROS</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">NEWS</a>
@@ -32,61 +32,15 @@
 				<a class="nav-link" href="#">ESPORTS</a>
 			</li>
 			<li class="nav-item dropdown">
+				<div id="google_translate_element"></div>
 
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-					aria-haspopup="true" aria-expanded="false">
-					Select Language
-				</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#" (click)="getData('english')">English</a>
-					<a class="dropdown-item" href="#" (click)="getData('spanish')">Español - España (Spanish -
-						Spain)</a>
-					<a class="dropdown-item" href="#" (click)="getData('french')">Français
-						(French)</a><a class="dropdown-item" href="#" (click)="getData('italian')">Italiano
-						(Italian)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('german')">Deutsch (German)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('greek')">Ελληνικά (Greek)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('koreana')">한국어 (Korean)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('schinese')">简体中文 (SimplifiedChinese)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('tchinese')">繁體中文 (Traditional Chinese)</a>
-					<a class="dropdown-item" href="#" (click)="getData('russian')">Русский (Russian)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('thai')">ไทย (Thai)</a>
-					<a class="dropdown-item" href="#" (click)="getData('japanese')">日本語 (Japanese)</a>
-					<a class="dropdown-item" href="#" (click)="getData('portuguese')">Português (Portuguese)</a>
-					<a class="dropdown-item" href="#" (click)="getData('brazilian')">Português - Brasil (Portuguese -
-						Brazil)</a>
-					<a class="dropdown-item" href="#" (click)="getData('polish')">Polski(Polish)</a>
-					<a class="dropdown-item" href="#" (click)="getData('danish')">Dansk(Danish)</a>
-					<a class="dropdown-item" href="#" (click)="getData('dutch')">Nederlands (Dutch)</a>
-					<a class="dropdown-item" href="#" (click)="getData('finnish')">Suomi (Finnish)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('norwegian')">Norsk
-						(Norwegian)</a><a class="dropdown-item" href="#" (click)="getData('swedish')">Svenska
-						(Swedish)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('czech')">Čeština (Czech)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('hungarian')">Magyar
-						(Hungarian)</a><a class="dropdown-item" href="#" (click)="getData('romanian')">Română
-						(Romanian)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('bulgarian')">Български
-						(Bulgarian)</a><a class="dropdown-item" href="#" (click)="getData('turkish')">Türkçe
-						(Turkish)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('ukrainian')">Українська
-						(Ukrainian)</a><a class="dropdown-item" href="#" (click)="getData('vietnamese')">Tiếng Việt
-						(Vietnamese)</a>
-
-					<a class="dropdown-item" href="#" (click)="getData('latam')">Español - Latinoamérica
-						(Spanish -Latin America)</a>
-				</div>
+				<script type="text/javascript">
+					function googleTranslateElementInit() {
+						new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+					}
+				</script>
+				<script type="text/javascript"
+					src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 			</li>
 		</ul>
