--- a/Dota-web-app/src/styles.css
+++ b/Dota-web-app/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-image: linear-gradient(to  right, rgb(30, 11, 11), gray);
+    background-image: linear-gradient(to  right, #191d21, #788691);
     color: white;
   }
