Add languages through pipes

--- a/Dota-web-app/src/app/navbar/navbar.component.html
+++ b/Dota-web-app/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
 					aria-haspopup="true" aria-expanded="false">
-					GAME
+					{{'hero.navbar.Game'|translate}}
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 					<a class="dropdown-item" href="#">STORE</a>
@@ -23,16 +23,21 @@
 				</div>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link active" href="#">HEROS</a>
+				<a class="nav-link active" href="#">{{'hero.navbar.HEROS'|translate}}</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">NEWS</a>
+				<a class="nav-link" href="#">{{'hero.navbar.NEWS'|translate}}</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">ESPORTS</a>
+				<a class="nav-link" href="#">{{'hero.navbar.ESPORTS'|translate}}</a>
 			</li>
-			<li class="nav-item dropdown">
-				<div id="google_translate_element"></div>
+			<li> {{'hero.navbar.SELECT LANGUAGE'|translate}}
+				<select (click)="SelectLang($event)">
+					<option *ngFor="let lang of supportLanguage;index as i">
+						{{lang}}
+						
+					</option>
+				</select>
 			</li>
 		</ul>
 	</div>
