--- a/Dota-web-app/src/app/heros/heros.component.html
+++ b/Dota-web-app/src/app/heros/heros.component.html
@@ -3,16 +3,13 @@
 	<div class="row">
 		
 		<div class="col text-center heading">
-			<p>CHOOSE YOUR HERO</p>
-			<h3 class="p-5">From magical tacticians to fierce brutes and cunning rogues, Dota 2's hero pool is massive
-				and
-				limitlessly diverse.
-				Unleash incredible abilities and devastating ultimates on your way to victory.</h3>
+			<p>{{'hero.title' |translate}} </p>
+			<h3 class="p-5">{{'hero.desc'|translate}} </h3>
 		</div>
 	</div>
 	<div class="row searchIcon mt-2 p-3">
-		<div class="col-md-3 col-sm-12 text-center">FILTER HEROS</div>
-		<div class="col-md-3 col-sm-12 text-center">ATTRIBUTE
+		<div class="col-md-3 col-sm-12 text-center">{{'hero.FILTER'|translate}}</div>
+		<div class="col-md-3 col-sm-12 text-center">{{'hero.ATTRIBUTE'|translate}}
 			<img
 				src="https://cdn.cloudflare.steamstatic.com/apps/dota2/images/dota_react/herogrid/filter-str-active.png">
 			<img
@@ -21,7 +18,7 @@
 				src="https://cdn.cloudflare.steamstatic.com/apps/dota2/images/dota_react/herogrid/filter-str-active.png">
 
 		</div>
-		<div class="col-md-3 col-sm-12 text-center">COMPLEXITY
+		<div class="col-md-3 col-sm-12 text-center">{{'hero.COMPLEXITY'|translate}}
 			<img src="https://cdn.cloudflare.steamstatic.com/apps/dota2/images/dota_react/herogrid/filter-diamond.png">
 			<img src="https://cdn.cloudflare.steamstatic.com/apps/dota2/images/dota_react/herogrid/filter-diamond.png">
 			<img src="https://cdn.cloudflare.steamstatic.com/apps/dota2/images/dota_react/herogrid/filter-diamond.png">
